[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.coverage.run]
omit = ["habito/main.py"]

[tool.coverage.report]
show_missing = "true"

[tool.pytest.ini_options]
addopts = "--cov=habito --cov-report=term-missing --cov-fail-under=100 --quiet"

[tool.ruff]
exclude = [".venv", "venv"]
ignore = []
line-length = 88
select = [
    "D",
    "E",
    "F",
    "W",
]

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "D101",
    "D102",
]
"**/*.py" = ["F405"]
